<resources>
    <string name="app_name">Select Sneakers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="text_registration">Войдите в аккаунт чтобы воспользоваться со всеми возможностями</string>
    <string name="Enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="skip">Пропустить</string>
    <string name="back">Назад</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="data">Основные данные</string>
    <string name="name_and_firstname">Имя и фамилия</string>
    <string name="e_mail">E-mail</string>
    <string name="numberPhone">Номер телефона</string>
    <string name="passwordRepeat">Повторите пароль</string>
    <string name="text">Создавая учетную запись или подписывая ее,Вы соглашаетесь с намиши</string>
    <string name="Kyrgyzstan">Кыргызстан</string>
    <string name="Russia">Россия</string>
    <string name="Belarus">Беларусь</string>
    <string name="Kazakhstan">Казахстан</string>
    <string name="Turkey">Турция</string>
    <string name="Uzbekistan">Узбекистан</string>
    <string name="remind_later">Напомнить позже</string>
    <string name="trend">В тренде</string>
    <string name="recommend">Рекомендуем посмотреть</string>
    <string name="good_day">Добрый день!</string>
    <string name="username">Имя пользователя</string>
    <string name="brand">Бренды</string>
    <string name="nike_sneakers">Nike sneakers</string>
    <string name="mens_running_shoes">Mens running shoes</string>
    <string name="_4590c">4590c</string>
    <string name="plus">+</string>
    <string name="discount">Скидки для всех!</string>
    <string name="discount_all">Скидки для всех покупателей</string>
    <string name="Nike">Nike</string>
    <string name="shoesDescription">Кроссовки Nike Air Max 97 с оригинальным волнистым дизайном, вдохновленным японскими скоростными пассажирскими экспрессами, позволяют вам развивать свой стиль на полной скорости.</string>
    <string name="just_shoes_images">Just_shoes_images</string>
    <string name="profile">Профиль</string>
    <string name="greetings">Добрый день!</string>
    <string name="name_surname">Имя Фамилия</string>
    <string name="control">Управление</string>
    <string name="change_name">Изменить имя</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="save">Сохранить</string>
    <string name="my_orders">Мои заказы</string>
    <string name="notification">Уведомление</string>
    <string name="my_data">Мои Данные</string>
    <string name="cards">Карты</string>
    <string name="help">Помощь</string>
    <string name="questions_answers">Вопросы и ответы</string>
    <string name="support">Поддержка</string>
    <string name="delete_photo">Удалить фото профиля</string>
    <string name="photo_will_delete">Фото профиля будет удален, потом вы можете снова загрузить новое фото</string>
    <string name="delete">Удалить</string>
    <string name="photo_is_delete">Фото профиля удалено</string>
    <string name="cancel">Отмена</string>
    <string name="from_gallery">Выбрать из галереи</string>
    <string name="from_camera">Сделать снимок</string>
    <string name="delete_photo_profile">Удалить фото профиля</string>
    <string name="add_photo_profile">Добавить фото профиля</string>
    <string name="delete_profile_photo">Удалить фото профиля?</string>
    <string name="photo_profile_will_delete">Фото профиля будет удалено, потом вы \n можете снова загрузить новое фото</string>
    <string name="field_name_surname">Заполните поля имя и фамилия</string>
    <string name="title_activity_lounch">LounchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_4_5_107">4.5 (107 отзыва)</string>
    <string name="desc">Описание</string>
    <string name="simila_product">Похожие товары</string>
</resources>