<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.launch.LaunchFragment">

    <ImageView
        android:id="@+id/img_select"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp150"
        android:src="@drawable/img_select"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/img_sneakers"
        android:layout_width="@dimen/dp136"
        android:layout_height="@dimen/dp20"
        android:layout_marginTop="@dimen/eight8dp"
        android:src="@drawable/img_sneakers"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_select"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight8dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/twentyFour24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_sneakers" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp270"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome">

        <TextView
            style="@style/TextView"
            android:text="@string/Kyrgyzstan" />

        <View style="@style/View" />

        <TextView
            style="@style/TextView"
            android:text="@string/Russia" />

        <View style="@style/View" />

        <TextView
            style="@style/TextView"
            android:text="@string/Belarus" />

        <View style="@style/View" />

        <TextView
            style="@style/TextView"
            android:text="@string/Kazakhstan" />

        <View style="@style/View" />

        <TextView
            style="@style/TextView"
            android:text="@string/Turkey" />

        <View style="@style/View" />

        <TextView
            style="@style/TextView"
            android:text="@string/Uzbekistan" />

    </LinearLayout>

    <TextView
        android:id="@+id/later"
        android:layout_width="@dimen/dp200"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight8dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="@dimen/eight8dp"
        android:text="@string/remind_later"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="@dimen/dp200"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight8dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="@dimen/eight8dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/later" />

</androidx.constraintlayout.widget.ConstraintLayout>