<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.choice.ChoiceFragment">

    <ImageView
        android:id="@+id/img_select"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp40"
        android:src="@drawable/img_select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgSneakers"
        android:layout_width="@dimen/dp136"
        android:layout_height="@dimen/dp20"
        android:layout_marginTop="@dimen/eight8dp"
        android:src="@drawable/img_sneakers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_select"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp24"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center"
        android:text="@string/text_registration"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        app:layout_constraintTop_toBottomOf="@id/imgSneakers" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp40"
        android:backgroundTint="@color/blue"
        android:padding="@dimen/dp16"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginBottom="@dimen/eight8dp"
        android:backgroundTint="@color/blue"
        android:padding="@dimen/dp16"
        android:text="@string/Enter"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/background_skip"
        android:paddingHorizontal="@dimen/eight8dp"
        android:paddingVertical="@dimen/dp4"
        android:text="@string/skip"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>